cli/tests/snapshots/arguments__subvolume_delete_by_subvolid.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"subvolume\", \"delete\", \"-i\", \"256\", \"/mnt\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: 0,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Subvolume(
        SubvolumeCommand {
            subcommand: Delete(
                SubvolumeDeleteCommand {
                    commit_after: false,
                    commit_each: false,
                    subvolid: Some(
                        256,
                    ),
                    recursive: false,
                    paths: [
                        "/mnt",
                    ],
                },
            ),
        },
    ),
}
