cli/tests/snapshots/arguments__subvolume_delete_commit_after.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"subvolume\", \"delete\", \"-c\", \"/mnt/subvol\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: 0,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Subvolume(
        SubvolumeCommand {
            subcommand: Delete(
                SubvolumeDeleteCommand {
                    commit_after: true,
                    commit_each: false,
                    subvolid: None,
                    recursive: false,
                    paths: [
                        "/mnt/subvol",
                    ],
                },
            ),
        },
    ),
}
