cli/tests/snapshots/arguments__subvolume_delete_commit_each.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"subvolume\", \"delete\", \"-C\", \"/mnt/subvol1\", \"/mnt/subvol2\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: 0,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Subvolume(
        SubvolumeCommand {
            subcommand: Delete(
                SubvolumeDeleteCommand {
                    commit_after: false,
                    commit_each: true,
                    subvolid: None,
                    recursive: false,
                    paths: [
                        "/mnt/subvol1",
                        "/mnt/subvol2",
                    ],
                },
            ),
        },
    ),
}
