cli/tests/snapshots/arguments__subvolume_delete_missing_path.snap
---
source: cli/tests/arguments.rs
expression: "parse_err(&[\"btrfs\", \"subvolume\", \"delete\"])"
---
error: the following required arguments were not provided:
  <PATHS>...
