cli/tests/snapshots/arguments__subvolume_delete_recursive.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"subvolume\", \"delete\", \"-R\", \"/mnt/subvol\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: 0,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Subvolume(
        SubvolumeCommand {
            subcommand: Delete(
                SubvolumeDeleteCommand {
                    commit_after: false,
                    commit_each: false,
                    subvolid: None,
                    recursive: true,
                    verbose: 0,
                    paths: [
                        "/mnt/subvol",
                    ],
                },
            ),
        },
    ),
}
