cli/tests/snapshots/arguments__subvolume_delete_subvolid_recursive_conflict.snap
---
source: cli/tests/arguments.rs
expression: "parse_err(&[\"btrfs\", \"subvolume\", \"delete\", \"-i\", \"256\", \"-R\", \"/mnt\"])"
---
error: the argument '--subvolid <SUBVOLID>' cannot be used with '--recursive'
