cli/tests/snapshots/arguments__subvolume_delete_verbose.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"subvolume\", \"delete\", \"-v\", \"/mnt/subvol\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: 1,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Subvolume(
        SubvolumeCommand {
            subcommand: Delete(
                SubvolumeDeleteCommand {
                    commit_after: false,
                    commit_each: false,
                    subvolid: None,
                    recursive: false,
                    verbose: 1,
                    paths: [
                        "/mnt/subvol",
                    ],
                },
            ),
        },
    ),
}
