cli/tests/snapshots/arguments__subvolume_find_new.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"subvolume\", \"find-new\", \"/mnt/subvol\", \"100\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: 0,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Subvolume(
        SubvolumeCommand {
            subcommand: FindNew(
                SubvolumeFindNewCommand {
                    path: "/mnt/subvol",
                    last_gen: 100,
                },
            ),
        },
    ),
}
