cli/tests/snapshots/arguments__subvolume_find_new_missing_gen.snap
---
source: cli/tests/arguments.rs
expression: "parse_err(&[\"btrfs\", \"subvolume\", \"find-new\", \"/mnt/subvol\"])"
---
error: the following required arguments were not provided:
  <LAST_GEN>
