cli/tests/snapshots/arguments__subvolume_get_default.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"subvolume\", \"get-default\", \"/mnt\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: false,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Subvolume(
        SubvolumeCommand {
            subcommand: GetDefault(
                SubvolumeGetDefaultCommand {
                    path: "/mnt",
                },
            ),
        },
    ),
}
