cli/tests/snapshots/arguments__subvolume_list.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"subvolume\", \"list\", \"/mnt\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: 0,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Subvolume(
        SubvolumeCommand {
            subcommand: List(
                SubvolumeListCommand {
                    only_below: false,
                    all: false,
                    parent: false,
                    ogeneration: false,
                    generation: false,
                    uuid: false,
                    parent_uuid: false,
                    received_uuid: false,
                    snapshots_only: false,
                    readonly: false,
                    deleted: false,
                    table: false,
                    gen_filter: None,
                    ogen_filter: None,
                    sort: [],
                    path: "/mnt",
                },
            ),
        },
    ),
}
